--- a/hioeb/public/stylesheets/main.css
+++ b/hioeb/public/stylesheets/main.css
@@ -6,3 +6,22 @@
     background-repeat: no-repeat;
     height: 40em;
 }
+
+#titleBanner h1, #titleBanner h5 {
+    text-transform: uppercase;
+    color: #FFF;
+    margin: 0;
+    padding: 0;
+    font-family: Lato, Arial, Helvetica, sans-serif;
+}
+
+#titleText {
+    font-size: 1.5em;
+    text-align: center;
+    line-height: 1.6em;
+}
+
+#titleText span {
+    font-size: 3.1em;
+    font-weight: 700;
+}
