--- a/hioeb/public/stylesheets/main.css
+++ b/hioeb/public/stylesheets/main.css
@@ -44,7 +44,7 @@
 }
 
 .doForYou {
-    height: 25%;
+    height: 200px;
 }
 
 .thinSectionTitle {
@@ -52,10 +52,7 @@
     font-family: Lato, Arial, Helvetica, sans-serif;
     font-weight: 100;
     text-transform: uppercase;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    height: 170px;
+    line-height: 200px;
 }
 
 #servicesRow {
